...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/listview_item_start_end_margin">

    <TextView
        android:id="@+id/cancel_taskhead"
        style="@style/custom_actionbar_textview_style"
        android:gravity="start"
        android:text="Cancel" />

    <TextView
        android:id="@+id/create_taskhead"
        style="@style/custom_actionbar_textview_style"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:text="Create" />

    <TextView
...
