...
    <TextView
        android:id="@+id/title"
        style="@style/title_textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/taskheaddetail_title" />

    <EditText
        android:id="@+id/taskheaddetail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Member List" />

    <ListView
        android:id="@+id/taskheaddetail_member_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:headerDividersEnabled="true" />
</LinearLayout>

