<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/member_add_bt"
        android:layout_weight="1"
        style="@style/add_button_style"
        android:background="@color/colorPrimary"
        android:text="+ Add member" />
</LinearLayout>