...
    android:layout_height="match_parent"
    android:background="@color/taskhead_background_color"
    tools:context=".taskheads.TaskHeadsFragment"
    android:id="@+id/swipe_refresh_layout">

    <com.kiwi.auready.util.view.DragSortListView
        android:id="@+id/taskheads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1dp" />

    <TextView
...
